--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ div {
 </head>
 <body>
 
-<img src="https://raw.githubusercontent.com/securem/main/images/logo5.webp" alt="Logo" />
-	
+<img src="https://raw.githubusercontent.com/secureum/main/images/logo5.webp" alt="Logo">
+
 	
     
     <div class="divider">VERIFY NOW!</div>
