--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ div {
 </head>
 <body>
 
-<img src="https://raw.githubusercontent.com/hessa75/securem/main/images.webp" alt="Logo" width="300" height="300">
+<img src="https://raw.githubusercontent.com/hessa75/securem/main/images.png" alt="Logo" width="300" height="300">
 
 	
     
