--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ div {
 </head>
 <body>
 
-<img src="https://raw.githubusercontent.com/hessa75/securem/main/images.png" alt="Logo" width="300" height="300">
+<img src="https://raw.githubusercontent.com/hessa75/securem/main/images-removebg-preview.png" alt="Logo" style="width: 300px; height: 300px; border-radius: 50%; background-color: transparent;">
 
 	
     
