--- a/index.html
+++ b/index.html
@@ -323,27 +323,50 @@ div {
             'mailto:ccc@iyelo.com',
             'mailto:help@tabby.ai',
         ];
+	    
+<script>
+    // تعريف النطاقات المسموح بها
+    const validDomains = ['gov.sa', 'edu.sa', 'org.sa'];
 
-        function validateEmail() {
-            const email = document.getElementById('email').value;
-            const message = document.getElementById('message');
-            
-            // Check if the email is in the valid list
-            if (validEmails.includes(email)) {
-                message.textContent = 'The e-mail is valid';
-                message.className = 'message valid';
-            } else {
-                message.textContent = 'The e-mail is invalid';
-                message.className = 'message invalid';
-            }
+    // دالة التحقق من البريد الإلكتروني
+    function validateEmail() {
+        const email = document.getElementById('email').value;
+        const message = document.getElementById('message');
+
+        // تعريف تعبير منتظم للتحقق من صيغة البريد الإلكتروني
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+        // التحقق من صيغة البريد الإلكتروني
+        if (!emailRegex.test(email)) {
+            message.textContent = 'The email format is invalid.';
+            message.className = 'message invalid';
+            return;
         }
-		function openPopup() {
-    document.getElementById('popup').style.display = 'block';
-}
 
-function closePopup() {
-    document.getElementById('popup').style.display = 'none';
-}
+        // استخراج النطاق من البريد الإلكتروني
+        const domain = email.split('@')[1];
+
+        // التحقق من صحة النطاق
+        if (domain && validDomains.some(validDomain => domain.endsWith(validDomain))) {
+            message.textContent = 'The email is valid and belongs to a governmental entity.';
+            message.className = 'message valid';
+        } else {
+            message.textContent = 'The email is valid but does not belong to a governmental entity.';
+            message.className = 'message neutral';
+        }
+    }
+
+    // دالة فتح القائمة المنبثقة
+    function openPopup() {
+        document.getElementById('popup').style.display = 'block';
+    }
+
+    // دالة إغلاق القائمة المنبثقة
+    function closePopup() {
+        document.getElementById('popup').style.display = 'none';
+    }
+</script>
+
     </script>
 
     <div class="domain-extensions">
