--- a/index.html
+++ b/index.html
@@ -338,16 +338,15 @@ div {
 
         // التحقق من صيغة البريد الإلكتروني
         if (!emailRegex.test(email)) {
-            message.textContent = 'The email format is invalid.';
+            message.textContent = 'The email format is invalid. Please ensure it follows the correct structure like "example@domain.com".';
             message.className = 'message invalid';
             return;
         }
 
         // استخراج النطاق من البريد الإلكتروني
         const domain = email.split('@')[1];
-
         if (!domain) {
-            message.textContent = 'Invalid email domain.';
+            message.textContent = 'Invalid email domain. Domain is missing or incorrect.';
             message.className = 'message invalid';
             return;
         }
@@ -373,22 +372,19 @@ div {
     }
 </script>
 
+<div class="domain-extensions">
+    <h3>Popular Domain Extensions and Their Meanings:</h3>
+    <ul>
+        <li>.com: Widely used for commercial purposes.</li>
+        <li>.net: Often used for internet services and networks.</li>
+        <li>.org: Typically used by non-profit organizations.</li>
+        <li>.gov: Reserved for government entities.</li>
+        <li>.edu: Used by educational institutions.</li>
+        <li>.info: Commonly used for informational websites.</li>
+        <li>.me: Often used for personal sites or individual branding.</li>
+    </ul>
+</div>
 
-  
-
-    <div class="domain-extensions">
-        <h3>Popular Domain Extensions and Their Meanings:</h3>
-        <ul>
-            <li>.com: Widely used for commercial purposes.</li>
-            <li>.net: Often used for internet services and networks.</li>
-            <li>.org: Typically used by non-profit organizations.</li>
-            <li>.gov: Reserved for government entities.</li>
-            <li>.edu: Used by educational institutions.</li>
-            <li>.info: Commonly used for informational websites.</li>
-            <li>.me: Often used for personal sites or individual branding.</li>
-        </ul>
-    </div>
-	
 
 </body>
 </html>
