--- a/index.html
+++ b/index.html
@@ -1,6 +1,76 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+
+    <title>Email Validation</title>
+
+<body>
+    <h3>VERIFY NOW! OR, cry later</h3>
+    <label for="email">Enter The e-mail:</label>
+    <input type="text" id="email" placeholder="example@domain.com">
+    <button onclick="validateEmail()">Verify</button>
+    <div id="message" class="message"></div>
+    <button onclick="showTips()">Show Tips</button>
+
+    <!-- قسم النطاقات ومعانيها -->
+    <div class="domain-extensions">
+        <h3>Popular Domain Extensions and Their Meanings:</h3>
+        <ul>
+            <li>.com: Widely used for commercial purposes.</li>
+            <li>.net: Often used for internet services and networks.</li>
+            <li>.org: Typically used by non-profit organizations.</li>
+            <li>.gov: Reserved for government entities.</li>
+            <li>.edu: Used by educational institutions.</li>
+            <li>.info: Commonly used for informational websites.</li>
+            <li>.me: Often used for personal sites or individual branding.</li>
+        </ul>
+    </div>
+
+    <script>
+        // تعريف النطاقات المسموح بها
+        const validDomains = ['gov.sa', 'edu.sa', 'org.sa'];
+
+        // دالة التحقق من البريد الإلكتروني
+        function validateEmail() {
+            const email = document.getElementById('email').value.trim(); // إزالة المسافات الزائدة
+            const message = document.getElementById('message');
+
+            // تعريف تعبير منتظم للتحقق من صيغة البريد الإلكتروني
+            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+            // التحقق من صيغة البريد الإلكتروني
+            if (!emailRegex.test(email)) {
+                message.textContent = 'The email format is invalid. Please ensure it follows the correct structure like "example@domain.com".';
+                message.className = 'message invalid';
+                return;
+            }
+
+            // استخراج النطاق من البريد الإلكتروني
+            const domain = email.split('@')[1];
+            if (!domain) {
+                message.textContent = 'Invalid email domain. Domain is missing or incorrect.';
+                message.className = 'message invalid';
+                return;
+            }
+
+            // التحقق من صحة النطاق
+            if (validDomains.some(validDomain => domain.endsWith(validDomain))) {
+                message.textContent = 'The email is valid and belongs to a governmental or educational entity.';
+                message.className = 'message valid';
+            } else {
+                message.textContent = 'The email is valid but does not belong to a governmental or educational entity.';
+                message.className = 'message neutral';
+            }
+        }
+
+        // دالة عرض النصائح
+        function showTips() {
+            alert("Ensure your email follows the standard format like example@domain.com.");
+        }
+    </script>
+</body>
+</html>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Secure M</title>
